--- a/src/js/grapl-cdk/Dockerfile
+++ b/src/js/grapl-cdk/Dockerfile
@@ -9,14 +9,14 @@ RUN source $NVM_DIR/nvm.sh && npm install --global aws-cdk
 
 # Grab all dependencies
 WORKDIR /home/grapl
-COPY js/grapl-cdk/package.json src/js/grapl-cdk/package.json
-COPY js/grapl-cdk/package-lock.json src/js/grapl-cdk/package-lock.json
+COPY --chown=grapl js/grapl-cdk/package.json src/js/grapl-cdk/package.json
+COPY --chown=grapl js/grapl-cdk/package-lock.json src/js/grapl-cdk/package-lock.json
 WORKDIR /home/grapl/src/js/grapl-cdk
 RUN source $NVM_DIR/nvm.sh && npm install
 
 # Copy in the rest of the source
 WORKDIR /home/grapl
-COPY js/grapl-cdk src/js/grapl-cdk
+COPY --chown=grapl js/grapl-cdk src/js/grapl-cdk
 
 # does typechecking, which is nice
 WORKDIR /home/grapl/src/js/grapl-cdk
@@ -28,8 +28,8 @@ FROM grapl-cdk-build AS grapl-cdk-test
 
 # We need the Rust Dockerfile to run the tests
 WORKDIR /home/grapl
-COPY rust/Dockerfile src/rust/Dockerfile
-COPY python/Dockerfile src/python/Dockerfile
+COPY --chown=grapl rust/Dockerfile src/rust/Dockerfile
+COPY --chown=grapl python/Dockerfile src/python/Dockerfile
 
 # Make fake zip files to appease the CDK tests
 WORKDIR /home/grapl/src/js/grapl-cdk/zips
