Internal 338 merge main (#732)
* add display property to node types

* merge changes

* add display prop to raw + enriched node

* remove display table and add display as a property to schema_properties_table

* add display property to node types

* merge changes

* add display prop to raw + enriched node

* remove display table and add display as a property to schema_properties_table

* fix cdk errors

* add cdk files

* add icon to index.html

* rerun ./build.sh

* fix PR comments

* add get_display_property() to schema.py, honestly don't know how this worked before

* black changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -419,9 +419,13 @@ services:
     environment:
       <<: *aws-region
       <<: *dgraph-env
+      <<: *dynamodb-env
       IS_LOCAL: "True"
       JWT_SECRET_ID: "JWT_SECRET_ID"
       PORT: ${GRAPL_GRAPHQL_PORT}
+      GRAPL_SCHEMA_PROPERTIES_TABLE: "${DEPLOYMENT_NAME}-grapl_schema_properties_table"
+      GRAPL_SCHEMA_TABLE: "${DEPLOYMENT_NAME}-grapl_schema_table"
+
       <<: *secretsmanager-env
       DEBUG_SERVICES: "${DEBUG_SERVICES}"
       VSC_DEBUGGER_PORT_FOR_GRAPHQL_ENDPOINT: "${VSC_DEBUGGER_PORT_FOR_GRAPHQL_ENDPOINT}"
