Fix the Redis endpoint environment variable value drop EVENT_CACHE_CLUSTER_ADDRESS in favor of REDIS_ENDPOINT, which we already have, and is more appropriate for the new Redis library.

--- a/local-grapl.env
+++ b/local-grapl.env
@@ -85,7 +85,7 @@ GRAPL_UX_ROUTER_HOST=ux-router.grapl.test
 # only for usage within the Docker Compose network.
 ########################################################################
 
-REDIS_ENDPOINT=http://${REDIS_HOST}:${REDIS_PORT}
+REDIS_ENDPOINT=redis://${REDIS_HOST}:${REDIS_PORT}
 
 # The remaining endpoints are all just aliases for our unified
 # Localstack service
