--- a/src/js/graphql_endpoint/tsconfig.json
+++ b/src/js/graphql_endpoint/tsconfig.json
@@ -16,6 +16,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
+    // TODO: "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true
   },
   "include": ["server.ts", "server.js", "modules/**/*.js", "modules/**/*.ts"]
