--- a/src/js/grapl-cdk/.prettierrc.toml
+++ b/src/js/grapl-cdk/.prettierrc.toml
@@ -1,4 +1,5 @@
 trailingComma = "es5"
 tabWidth = 4
+useTabs = false 
 semi = true
-singleQuote = true
+singleQuote = false  # in-line with our Python black linting
