As of Docker Compose v 1.29.0 waiting for a service to fully complete successfully is supported, relieving our dependence on wait-for-it. By also leveraging `heathcheck` and `condition: service_healthy` we can get rid of the dependence on wait-for-it completely.

--- a/Dockerfile.pulumi
+++ b/Dockerfile.pulumi
@@ -5,8 +5,7 @@ SHELL ["/bin/bash", "-c"]
 RUN apt-get update && apt-get install --yes \
     build-essential \
     curl \
-    unzip \
-    wait-for-it
+    unzip
 
 RUN adduser \
         --disabled-password \
