--- a/pants.ci.toml
+++ b/pants.ci.toml
@@ -13,3 +13,13 @@
 [GLOBAL]
 dynamic_ui = false
 colors = true
+
+# Since multiple jobs could run on the same Buildkite worker node, we
+# need to make sure the cache directories are isolated.
+local_store_dir = ".cache/pants/lmdb_store"
+named_caches_dir = ".cache/pants/named_caches"
+
+pants_ignore = [
+  ".cache/pants/named_caches",
+  ".cache/pants/lmdb_store",
+]
