--- a/test/docker-compose.unit-tests-js.yml
+++ b/test/docker-compose.unit-tests-js.yml
@@ -6,11 +6,11 @@ services:
 
   grapl-engagement-view-test:
     image: grapl/grapl-engagement-view-build:${TAG:-latest}
-    build: 
+    build:
       context: ${PWD}/src
       dockerfile: js/engagement_view/Dockerfile
-      target: engagement-view-deps
-    command: sh -c 'CI=true yarn test'
+      target: engagement-view-build
+    command: bash -c "source $$NVM_DIR/nvm.sh && CI=true yarn test"
 
   grapl-cdk-test:
     image: grapl/grapl-cdk-test:${TAG:-latest}
@@ -18,7 +18,7 @@ services:
       context: ${PWD}/src
       dockerfile: js/grapl-cdk/Dockerfile
       target: grapl-cdk-test
-    command: npm run test
+    command: bash -c "source $$NVM_DIR/nvm.sh && npm run test"
 
   # grapl-graphql-endpoint:
   #   image: grapl/grapl-graphql-endpoint-test:${TAG:-latest}
