--- a/base-images/Dockerfile.base
+++ b/base-images/Dockerfile.base
@@ -87,4 +87,6 @@ RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | b
     && nvm install $NODE_VERSION \
     && nvm alias default $NODE_VERSION \
     && nvm use default
-RUN source $NVM_DIR/nvm.sh && npm install -g yarn  # FIXME: version
+ENV NODE_PATH="$NVM_DIR/$NODE_VERSION/lib/node_modules"
+ENV PATH="$NVM_DIR/$NODE_VERSION/bin:$PATH"
+RUN source $NVM_DIR/nvm.sh && npm install -g yarn
