--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -103,22 +103,26 @@ services:
       - GRAPL_AUTH_HOST
       - GRAPL_AUTH_PORT
 
-  cypress-integration-tests:
-    image: grapl/grapl-cypress:${TAG:-latest}
-    build:
-      context: ${PWD}/test
-      dockerfile: ./Dockerfile.cypress
-      target: grapl-cypress
-    volumes:
-      - "./integration-outputs/screenshots:/test/cypress/screenshots"
-      - "./integration-outputs/videos:/test/cypress/videos"
-    command: |
-      /bin/bash -c "
-        CYPRESS_BASE_URL=http://${GRAPL_API_HOST}:${GRAPL_HTTP_FRONTEND_PORT} cypress run --browser chrome --headless;
-        true # force pipeline success until CORS/auth issue resolved
-      "
-    environment:
-      - GRAPL_API_HOST
+  # TODO: Re-enable these tests after the following issues are resolved:
+  # - https://github.com/grapl-security/issue-tracker/issues/385
+  # - https://github.com/grapl-security/issue-tracker/issues/386
+  # - https://github.com/grapl-security/issue-tracker/issues/387
+  # cypress-integration-tests:
+  #   image: grapl/grapl-cypress:${TAG:-latest}
+  #   build:
+  #     context: ${PWD}/test
+  #     dockerfile: ./Dockerfile.cypress
+  #     target: grapl-cypress
+  #   user: ${UID}:${GID}
+  #   volumes:
+  #     - "./integration-outputs/screenshots:/test/cypress/screenshots"
+  #     - "./integration-outputs/videos:/test/cypress/videos"
+  #   command: |
+  #     /bin/bash -c "
+  #       CYPRESS_BASE_URL=http://${GRAPL_API_HOST}:${GRAPL_HTTP_FRONTEND_PORT} cypress run --browser chrome --headless
+  #     "
+  #   environment:
+  #     - GRAPL_API_HOST
   
   graphql-endpoint-tests:
     image: grapl/graphql-endpoint-tests:${TAG:-latest}
