--- a/src/js/engagement_view/.gitignore
+++ b/src/js/engagement_view/.gitignore
@@ -1,7 +1,8 @@
 # As recommended by https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
 .yarn/*
-!.yarn/cache
-!.yarn/releases
+!.yarn/cache/
+!.yarn/patches
 !.yarn/plugins
+!.yarn/releases
 !.yarn/sdks
 !.yarn/versions
