--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.1.1",
     "d3": "^6.5.0",
     "debug": "^2.6.9",
+    "eslint-config-react-app": "^6.0.0",
     "formik": "^2.1.4",
     "gulp": "^4.0.2",
     "history": "^5.0.0",
@@ -47,6 +48,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "yarn": "2.4.1"
   },
   "eslintConfig": {
     "extends": "react-app"
