--- a/src/js/engagement_view/tsconfig.json
+++ b/src/js/engagement_view/tsconfig.json
@@ -24,6 +24,11 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src/**/*.ts"
-, "src/tests/graphDisplay.test.tsx", "src/setupProxy.tsx"  ]
+    "src",
+    "src/*",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/tests/graphDisplay.test.tsx",
+    "src/setupProxy.tsx"
+  ]
 }
