Create GraphQL from the node schemas in dynamodb (#723)
* GraphQL Endpoint reads dynamodb schema to generate types (357)

some formats

okay gotta figure out recursive types

I think it works except for the cannot-query-field-uid thing

Inching closer, just bad at detecting Lens and Risk

node debug branch

Got debugger for graphql working

minor bugfixes here and there

I think it may work now except for plugintype

Upgrade to Pulumi 2.24.1

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

Added debugger for graphql_endpoint (#724)

* node debug branch

* Got debugger for graphql working

What if I remove PluginType

It works, except Scope returns an array of None

bahahaha it works

* Remove unused stuff

* friggin gitkeep

* pkg lock

* Attempt to shoehorn in Display

* I think its all good, except do i actually access the display prop? currently ui says just 'hostname'

* Getting closer. Fixed subscript issue.

* remove unneeded things

* remove one more thing

* ok now i have format flow cool

* Added subset_equals and stuff; trying to debug why risks no longer shows up

* use flatmapping huzzah

* woohoo e2e tests rule

* format

* js format

* ok tests pass. now unit tests

* add botocore requirement

* ok i can commit now thank god

* fix a test

* add a TODO link

* formatting

--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -1,5 +1,6 @@
 # Any Python dependencies used by our code should be declared here.
 boto3
+botocore
 chalice
 click
 hypothesis
@@ -15,6 +16,7 @@ pulumi-aws>=3.2.0,<4.0.0
 pulumi_random
 pydgraph
 pyjwt
+pytest
 requests
 redis
 typing_extensions
