--- a/src/js/graphql_endpoint/package.json
+++ b/src/js/graphql_endpoint/package.json
@@ -30,8 +30,11 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/google-protobuf": "^3.7.2",
+    "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/protobufjs": "^6.0.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   }
 }
