--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -4,44 +4,35 @@
   "private": true,
   "proxy": "http://127.0.0.1:1234",
   "dependencies": {
-    "@material-ui/core": "^4.9.9",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.11.3",
-    "@stardust-ui/docs-components": "^0.40.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^7.1.2",
-    "@trendmicro/react-sidenav": "^0.5.0",
-    "@types/jest": "^24",
-    "@types/node": "^12.12.34",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/react-sidebar": "^3.0.0",
-    "@types/yup": "^0.29.3",
-    "clsx": "^1.1.1",
-    "d3": "^6.5.0",
-    "debug": "^2.6.9",
-    "eslint-config-react-app": "^6.0.0",
-    "formik": "^2.1.4",
-    "gulp": "^4.0.2",
-    "history": "^5.0.0",
-    "http-proxy-middleware": "^1.0.6",
-    "jest-dom": "^4.0.0",
-    "minimist": "^1.2.3",
-    "prettier": "2.0.3",
-    "react": "^16.13.1",
-    "react-async-hook": "^3.6.2",
-    "react-dom": "^16.13.1",
-    "react-force-graph": "^1.32.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-test-render": "^1.1.2",
-    "semantic-ui-react": "^0.88.2",
-    "three": "^0.125.2",
-    "typescript": "^4.1.5",
-    "typescript-formatter": "^7.2.2",
-    "yup": "^0.29.1"
+    "@material-ui/core": "^4.9",
+    "@material-ui/icons": "^4.9",
+    "@material-ui/styles": "^4.11",
+    "@stardust-ui/docs-components": "^0.40",
+    "@trendmicro/react-sidenav": "^0.5",
+    "@types/node": "^12.12",
+    "@types/react-dom": "^16.9",
+    "@types/react-router": "^5.1",
+    "@types/react-router-dom": "^5.1",
+    "@types/react-sidebar": "^3.0",
+    "@types/yup": "^0.29",
+    "clsx": "^1.1",
+    "d3": "^6.5",
+    "debug": "^2.6",
+    "formik": "^2.1",
+    "gulp": "^4.0",
+    "history": "^5.0",
+    "http-proxy-middleware": "^1.0",
+    "minimist": "^1.2",
+    "react": "^16.13",
+    "react-async-hook": "^3.6",
+    "react-dom": "^16.13",
+    "react-force-graph": "^1.32",
+    "react-router-dom": "^5.2",
+    "react-scripts": "^4.0",
+    "react-test-render": "^1.1",
+    "semantic-ui-react": "^0.88",
+    "three": "^0.125",
+    "yup": "^0.29"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,7 +56,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/react": "^16.9.32"
+    "@babel/preset-typescript": "^7.12",
+    "@testing-library/jest-dom": "^4.2",
+    "@testing-library/react": "^11.2",
+    "@testing-library/user-event": "^7.1",
+    "@types/jest": "^24",
+    "@types/react": "^16.9",
+    "eslint-config-react-app": "^6.0",
+    "jest-dom": "^4.0",
+    "prettier": "2.0",
+    "typescript": "^4.1",
+    "typescript-formatter": "^7.2"
   }
 }
