--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,13 @@ node_modules/
 
 # Yarn packages
 src/js/engagement_view/.yarn/install-state.gz
-
+.yarn/*
+!.yarn/cache/
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # Distribution / packaging
 build/
