--- a/Dockerfile.pulumi
+++ b/Dockerfile.pulumi
@@ -27,15 +27,8 @@ COPY --chown=grapl 3rdparty 3rdparty
 # We need to ignore both Pants' cache as well as our Pulumi venv in
 # this particular case since we're operating out of the same directory
 # on everything.
-ENV PANTS_IGNORE="['.cache', 'venv']"
+ENV PANTS_IGNORE="['.cache']"
 RUN ./pants --version
-
-# Automatically ensures that our virtualenv is created and active on
-# all subsequent actions
-RUN mkdir pulumi-venv
-ENV VIRTUAL_ENV=/home/grapl/pulumi-venv
-RUN python3 -m venv $VIRTUAL_ENV
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
 COPY --chown=grapl pulumi pulumi
 
