Actually serving the query string from graphql-endpoint, and consuming it
Fix a bug in fetch

solving bugs

Almost done, might try to fix the notification

oh, have to build engagement view

--- a/src/js/engagement_view/Dockerfile
+++ b/src/js/engagement_view/Dockerfile
@@ -20,6 +20,7 @@ COPY js/engagement_view .
 FROM engagement-view-deps AS engagement-view-build
 
 # build sources
+RUN yarn add react-scripts
 RUN yarn build
 
 # no-op the base image cmd, so it doesn't launch a Node repl
