--- a/src/rust/analyzer-dispatcher/Cargo.toml
+++ b/src/rust/analyzer-dispatcher/Cargo.toml
@@ -9,8 +9,8 @@ grapl-graph-descriptions = { path="../graph-descriptions", version="*" }
 grapl-config = {path="../grapl-config", version="*"}
 grapl-observe = {path = "../grapl-observe"}
 grapl-service = {path="../grapl-service"}
-aws_lambda_events = "0.2.1"
-futures = "0.3.*"
+aws_lambda_events = "0.4"
+futures = "0.3"
 
 base64 = "0.13"
 bytes = "1"
@@ -23,14 +23,14 @@ rusoto_core = { version="0.46", default_features = false, features=["rustls"] }
 rusoto_sqs = { version="0.46", default_features = false, features=["rustls"] }
 rusoto_credential = "0.46"
 
-async-trait = "0.1.22"
+async-trait = "0.1"
 zstd = "0.6"
 tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
-chrono = "0.4.11"
+chrono = "0.4"
 sqs-executor = { path = "../sqs-executor/" }
-thiserror = "1.0.23"
+thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.61"
+serde_json = "1.0"
 
 [dependencies.uuid]
 version = "*"
