--- a/src/rust/generators/osquery-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/osquery-subgraph-generator/Cargo.toml
@@ -18,16 +18,16 @@ grapl-service = { path = "../../grapl-service" }
 sqs-executor = { path = "../../sqs-executor/" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-failure = "0.1.*"
-log = "0.4.3"
-regex = "1.3.9"
+failure = "0.1"
+log = "0.4"
+regex = "1.3"
 
 rusoto_s3 = {version="0.46.0", default_features = false, features=["rustls"]}
 rusoto_core = {version="0.46.0", default_features = false, features=["rustls"]}
 rusoto_sqs = {version="0.46.0", default_features = false, features=["rustls"]}
 
-async-trait = "0.1.31"
+async-trait = "0.1"
 zstd = "0.6"
 tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread", "fs"] }
-thiserror = "1.0.23"
-tracing = "0.1.22"
+thiserror = "1.0"
+tracing = "0.1"
