--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -12,14 +12,14 @@ grapl-observe = {path = "../../grapl-observe", version="*"}
 
 sqs-executor = { path = "../../sqs-executor/" }
 grapl-service = { path = "../../grapl-service/" }
-serde = "1.0.110"
-serde_json = "1.0.53"
-serde_derive = "1.0.110"
-failure = "0.1.*"
-prost = "0.6.*"
-log = "0.4.3"
-regex = "1.1.0"
-lazy_static = "1.2.0"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
+failure = "0.1"
+prost = "0.7"
+log = "0.4"
+regex = "1.3"
+lazy_static = "1.2"
 sysmon = "0.2"
 chrono = "0.4"
 stopwatch = "0"
@@ -28,11 +28,11 @@ rusoto_s3 = {version="0.46.0", default_features = false, features=["rustls"]}
 rusoto_core = {version="0.46.0", default_features = false, features=["rustls"]}
 rusoto_sqs = {version="0.46.0", default_features = false, features=["rustls"]}
 rusoto_credential = "0.46.0"
-futures = "0.3.*"
-aws_lambda_events = "0.2.0"
+futures = "0.3"
+aws_lambda_events = "0.4"
 
-async-trait = "0.1.31"
-thiserror = "1.0.22"
+async-trait = "0.1"
+thiserror = "1.0"
 
 zstd = "0.6"
 tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
