--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -17,5 +17,6 @@ members = [
     "./generators/osquery-subgraph-generator",
     "./generators/sysmon-subgraph-generator",
     "./sqs-executor",
+    "./sysmon",
     "./grapl-service",
 ]
