--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -12,6 +12,7 @@ grapl-observe = {path = "../../grapl-observe", version="*"}
 
 sqs-executor = { path = "../../sqs-executor/" }
 grapl-service = { path = "../../grapl-service/" }
+sysmon = { path = "../../sysmon/" }
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
@@ -20,7 +21,6 @@ prost = "0.7"
 log = "0.4"
 regex = "1.3"
 lazy_static = "1.2"
-sysmon = "0.2"
 chrono = "0.4"
 
 rusoto_s3 = {version="0.46.0", default_features = false, features=["rustls"]}
