--- a/src/rust/analyzer-dispatcher/Cargo.toml
+++ b/src/rust/analyzer-dispatcher/Cargo.toml
@@ -31,7 +31,4 @@ sqs-executor = { path = "../sqs-executor/" }
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
-[dependencies.uuid]
-version = "*"
-features = ["v4"]
+uuid = { version = "0.8", features=["v4"] }
