--- a/src/rust/generators/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/generic-subgraph-generator/Cargo.toml
@@ -32,8 +32,4 @@ eyre = "0.6"
 thiserror = "1.0"
 serde = "1.0"
 serde_json = "1.0"
-
-
-[dependencies.uuid]
-version = "*"
-features = ["v4"]
+uuid = { version = "0.8", features=["v4"] }
