--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -39,7 +39,4 @@ graph-generator-lib = { path="../graph-generator-lib" }
 tracing = "0.1"
 tracing-subscriber = "0.2"
 tracing-futures = "0.2"
-
-[dependencies.uuid]
-version = "*"
-features = ["v4"]
+uuid = { version = "0.8", features=["v4"] }
