Use GRAPL_API_HOST to access engagement-edge lambda in tests
By hitting our Nginx proxy, we are ultimately hitting the API Gateway,
thus using the lambda function for engagement-edge.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/test/docker-compose.e2e-tests.yml
+++ b/test/docker-compose.e2e-tests.yml
@@ -29,8 +29,8 @@ services:
       - DYNAMODB_ACCESS_KEY_ID
       - DYNAMODB_ACCESS_KEY_SECRET
       - DYNAMODB_ENDPOINT
-      - GRAPL_AUTH_HOST
-      - GRAPL_AUTH_PORT
+      - GRAPL_API_HOST
+      - GRAPL_HTTP_FRONTEND_PORT
       - GRAPL_GRAPHQL_HOST
       - GRAPL_GRAPHQL_PORT
       - GRAPL_MODEL_PLUGIN_DEPLOYER_HOST
