Retry some Pants commands that usually fail in CI (#758)
* Retry some Pants commands that usually fail in CI

* Move retries up to the CI level

* fix a thing

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -48,7 +48,7 @@ jobs:
             ~/.cache/pants/lmdb_store
 
       - name: Python unit tests
-        run: make test-unit-python
+        run: ./build-support/retry.sh --sleep=0 --tries=3 -- make test-unit-python
 
   js-unit-tests:
     runs-on: ubuntu-latest
