--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -21,3 +21,11 @@ requests
 redis
 typing_extensions
 zstd
+
+# This was introduced when we updated to Pants 2.4.0; lambdex (which
+# we use to generate AWS lambda zip files) has requirements that
+# conflict with the setuptools that Pants pulls in. We should remove
+# this at the earliest possible convenience.
+#
+# I *think* this may be related to https://github.com/wickman/lambdex/pull/8
+setuptools>=50.3.0,<50.4
