--- a/src/rust/grapl-service/Cargo.toml
+++ b/src/rust/grapl-service/Cargo.toml
@@ -9,7 +9,10 @@ edition = "2018"
 [dependencies]
 sqs-executor = { path = "../sqs-executor" }
 grapl-graph-descriptions = { path = "../graph-descriptions" }
-zstd = "0.6"
+grapl-config = { path = "../grapl-config" }
+
+zstd = "0.7"
+libflate = "1"
 prost = "0.7"
 tracing = "0.1"
 thiserror = "1.0"
