Graplctl: add automati grapl-root detection

--- a/src/python/graplctl/graplctl/BUILD
+++ b/src/python/graplctl/graplctl/BUILD
@@ -1,5 +1,8 @@
 python_library(
     name="graplctl_lib",
+    dependencies=[
+        'src/python/grapl-common:grapl-common',
+    ],
 )
 
 pex_binary(
