--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 # Test outputs
 test/integration-outputs
+# Artifacts dumped from dump_artifacts.py script
+/artifacts_*_[0-9]*/
 
 # Environments
 .env
