Add basic benchmarks for generators

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "./grapl",
     "./grapl-config",
     "./grapl-utils",
+    "./grapl-test",
     "./grapl-observe",
     "./metric-forwarder",
     "./node-identifier",
