--- a/src/rust/generators/osquery-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/osquery-subgraph-generator/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "osquery_subgraph_generator_lib"
+
 [dependencies]
 grapl-graph-descriptions = { path="../../graph-descriptions", version="*" }
 endpoint-plugin = {path="../../endpoint-plugin"}
@@ -13,6 +16,7 @@ grapl-config = { path = "../../grapl-config", version="*" }
 grapl-observe = { path = "../../grapl-observe", version="*" }
 graph-generator-lib = { path="../graph-generator-lib", version="*" }
 grapl-service = { path = "../../grapl-service" }
+grapl-test = { path = "../../grapl-test", version = "*" }
 
 
 sqs-executor = { path = "../../sqs-executor/" }
