--- a/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/sysmon-subgraph-generator/Cargo.toml
@@ -4,11 +4,15 @@ version = "1.0.0"
 authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "sysmon_subgraph_generator_lib"
+
 [dependencies]
 grapl-graph-descriptions = { path="../../graph-descriptions", version="*" }
 endpoint-plugin = { path="../../endpoint-plugin", version="*"}
 grapl-config = {path = "../../grapl-config", version="*"}
 grapl-observe = {path = "../../grapl-observe", version="*"}
+grapl-test = { path = "../../grapl-test", version = "*"}
 
 sqs-executor = { path = "../../sqs-executor/" }
 grapl-service = { path = "../../grapl-service/" }
@@ -35,7 +39,7 @@ async-trait = "0.1.31"
 thiserror = "1.0.22"
 
 zstd = "0.6"
-tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
+tokio = { version = "1", features = ["sync", "rt", "macros", "time", "rt-multi-thread", "fs"] }
 graph-generator-lib = { path="../graph-generator-lib" }
 tracing = "0.1"
 tracing-subscriber = "0.2"
