Fixes for benchmarking and move to criterion

--- a/src/rust/generators/osquery-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/osquery-subgraph-generator/Cargo.toml
@@ -9,6 +9,13 @@ edition = "2018"
 [lib]
 name = "osquery_subgraph_generator_lib"
 
+[dev-dependencies]
+criterion = { version = "0.3", features = ["async_tokio", "html_reports"] }
+
+[[bench]]
+name = "generator_bench"
+harness = false
+
 [dependencies]
 grapl-graph-descriptions = { path="../../graph-descriptions", version="*" }
 endpoint-plugin = {path="../../endpoint-plugin"}
@@ -16,8 +23,6 @@ grapl-config = { path = "../../grapl-config", version="*" }
 grapl-observe = { path = "../../grapl-observe", version="*" }
 graph-generator-lib = { path="../graph-generator-lib", version="*" }
 grapl-service = { path = "../../grapl-service" }
-grapl-test = { path = "../../grapl-test", version = "*" }
-
 
 sqs-executor = { path = "../../sqs-executor/" }
 serde = { version = "1.0", features = ["derive"] }
