--- a/test/docker-compose.e2e-tests.yml
+++ b/test/docker-compose.e2e-tests.yml
@@ -22,7 +22,7 @@ services:
     environment:
       - AWS_REGION
       - DEPLOYMENT_NAME
-      - DEBUG_SERVICES=${DEBUG_SERVICES}
+      - DEBUG_SERVICES=${DEBUG_SERVICES:-}
       - DGRAPH_HOST
       - DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT
       - DUMP_ARTIFACTS=${DUMP_ARTIFACTS:-False}
