Okay it's all hooked in to the Makefile

--- a/etc/formatter/Dockerfile
+++ b/etc/formatter/Dockerfile
@@ -1,9 +1,10 @@
-FROM debian:buster-slim AS format
+FROM debian:buster-slim AS formatter
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
         ca-certificates \
         netbase \
         curl \
+        make \
     && rm -rf /var/lib/apt/lists/*
 
 # Install npm, Prettier
@@ -11,5 +12,7 @@ RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
 RUN apt-get install -y nodejs
 RUN npm install -g prettier@2.2.1
 
-SHELL ["/bin/bash", "-c"]
-#USER nobody
+USER nobody
+
+WORKDIR /home/linter
+COPY ./Makefile /home/linter/Makefile
