--- a/etc/formatter/Dockerfile
+++ b/etc/formatter/Dockerfile
@@ -12,6 +12,10 @@ RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
 RUN apt-get install -y nodejs
 RUN npm install -g prettier@2.2.1
 
+# TODO:
+# In later iterations, we can also install all the Rustup cargofmt stuff here
+# as well as Pants to perform containerized linting.
+
 USER nobody
 
 WORKDIR /home/linter
